[tool.poetry]
name = "late-checkout-api"
version = "0.1.0"
description = ""
authors = ["MoTaroh <52590586+MoTaroh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
