[tool.poetry]
name = "late-checkout-api"
version = "0.1.0"
description = ""
authors = ["MoTaroh <52590586+MoTaroh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.0"
pytest = "^6.2.5"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"
pyproject-flake8 = "^0.0.1-alpha.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.mypy]
python_version = "3.8"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]